2011-10-22 Roman
- UI.VCAEngine: Remove DB version 1 support.


2011-10-21 Roman
- FIX:UI.VCAEngine: User API function SessWdg::wdgAdd() is fixed for process elements list update.
- UI.VCAEngine: User's attributes modify to change "name" and "wa" is set to hot change, without full
    attribute remove.
- UI.WebCfgD: Filters for unactive images changed from "gray" to "unact".
    "unact" filter is added for light-dark unactive images.
- UI.WebVision: HTML sting encode is added to JS-code. Image convert backend function is added.
    Images resize code is moved to server side for smooth.
    Inactive button display is added. Button display borders is changed to compact.


2011-10-20 Roman
- UI.WebVision: Set global runtime window status bar value on set attribute "tipStatus" is added.


2011-10-20 Maxim
- FIX:UI.Vision: Cursor's change efter editing the element's list is fixed for the primitive ElFigure.
- FIX:UI.Vision: Moving the several shapes of the connected ones with keyboard keys is fixed for the primitive ElFigure.
- FIX:UI.Vision: Orto drawing of the shapes is fixed for the primitive ElFigure.
- UI.Vision: Connection of the shapes, while  one of them is being drawn, is added for the primitive ElFigure.


2011-10-18 Roman
- FIX:UI.Vision: In development mode selection widget into dots place is fixed.
- UI.Vision: Set global runtime window status bar value on set attribute "tipStatus" is added.


2011-10-15 Roman
- !!!!:SYS: Loaded objects check to removed from DB for remove object is added.
    Checking for remove performed only at direct selected DB loading.
- !!!!:DB: The function TDBS::dataSeek() and TDBS::dataDel() is updated for strong config file process allow.
- UI:QTCfg: List and Table processing is some updated for full space occupy by Vandrizm initiative.


2011-10-14 Roman
- Security: Users and groups check to removed from DB for remove object is added.
    Checking for remove performed only at direct selected DB loading.